# mistral7b-awq-rag-demo

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt
notebook/: 00_baseline.ipynb  00_baseline.slides.html  00_mistral7b_awq.ipynb  00_mistral7b_awq_test.ipynb  00_presentation.ipynb  README.ipynb
notebooks/: 00_introduction.ipynb  01_speech2text.ipynb  utils.py
resource/: download_model.sh
resource/data/audio/: jerome.m4a
resource/model/: download_model.sh
resource/vllm/: plugin-redoc-0.yaml
