[tool.poetry]
name = "mistral7b-awq-rag-demo"
version = "0.1"
description = ""
authors = ["Mirco Marahrens <mirco.marahrens@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
pandas = "^2.1.3"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
autoawq = {url = "https://github.com/casper-hansen/AutoAWQ/releases/download/v0.1.6/autoawq-0.1.6+cu118-cp310-cp310-linux_x86_64.whl"}

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
