[tool.poetry]
name = "rag-demo"
version = "0.1"
description = ""
authors = ["Mirco Marahrens <mirco.marahrens@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
pandas = "^2.1.3"
requests = "^2.31.0"
torch = {version = "2.1.0", source = "pytorch"}
bitsandbytes = "^0.41.2.post2"
accelerate = "^0.24.1"
transformers = "^4.35.2"
peft = "^0.6.2"
scipy = "^1.11.4"
langchain = "^0.0.340"
playwright = "^1.40.0"
html2text = "^2020.1.16"
sentence-transformers = "^2.2.2"
faiss-gpu = "^1.7.2"
nvidia-ml-py3 = "^7.352.0"
pypdf = "^3.17.1"
pdfminer-six = "^20221105"
# we needed autoawq for cu118 here

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"
ipywidgets = "^8.1.1"
pre-commit = "^3.5.0"
black = "^23.11.0"
notebook = "^7.0.6"
jupyterlab = "^4.0.9"
jupyterlab-rise = "^0.41.0"



[tool.poetry.group.frontend.dependencies]
streamlit = "^1.28.2"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
